--- a/package.json
+++ b/package.json
@@ -4,16 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+	"start": "node index.js"
   },
   "keywords": [
     "discord",
     "dpi",
-    "overwatch"
+    "overwatch",
+    "heroku"
   ],
   "author": "klawx3@gmail.com",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^11.2.1"
+    "discord.js": "^11.2.1",
+    "ejs": "^2.5.6",
+    "express": "^4.15.3"
   }
 }
