--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
   "license": "ISC",
   "dependencies": {
     "discord.js": "^11.2.1",
-    "ejs": "^2.5.6",
-    "express": "^4.15.3"
+    "ejs": "^2.5.6"
   }
 }
