--- a/package.json
+++ b/package.json
@@ -1,22 +1,19 @@
 {
   "name": "kenshi_dpi_discord",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-	"start": "node index.js"
+    "start": "node index.js"
   },
   "keywords": [
     "discord",
     "dpi",
-    "overwatch",
-    "heroku"
+    "overwatch"
   ],
   "author": "klawx3@gmail.com",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^11.2.1",
-    "ejs": "^2.5.6"
+    "discord.js": "^11.2.1"
   }
 }
